crates/postgres-subsystem/postgres-core-builder/src/access/snapshots/postgres_core_builder__access__precheck_builder__tests__direct_field.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/access/precheck_builder.rs
expression: selection
---
Path:
  - column_path:
      - Leaf:
          table_id:
            index: 0
            generation: ~
          column_index: 0
    field_path:
      Normal:
        - - id
        - AutoIncrement
  - Plain:
      type_id:
        Primitive:
          index: 1
          generation: ~
      type_name: Int
  - ~
